@@ -7,6 +7,11 @@
 		<PROPERTY NAME="label" VALUE="C++" />
 		<PROPERTY NAME="indentOpenBrackets" VALUE="{" />
 		<PROPERTY NAME="indentCloseBrackets" VALUE="}" />
+		<!-- the ; hack is there so that stuff like if(bob) fred();
+		  -- does not indent the next line -->
+		<PROPERTY NAME="indentPrevLine" VALUE="\s*(if|else if|else|while|for|case)\s*\([^;]*" />
+		<!-- set this to 'true' if you want to use GNU coding style -->
+		<PROPERTY NAME="doubleBracketIndent" VALUE="false" />
 		<PROPERTY NAME="commentStart" VALUE="/*" />
 		<PROPERTY NAME="commentEnd" VALUE="*/" />
 		<PROPERTY NAME="boxComment" VALUE="*" />
